# hermes-multienv-plugin

./: .gitignore  BDD.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  __init__.py  design.json  plugin.yaml  pyproject.toml
.github/workflows/: test.yml
multienv/: __init__.py  dispatch.py  docker_existing.py  execute_code.py  handlers.py  plugin.yaml  registry.py  schemas.py  transfer.py  utils.py
multitool/: __init__.py  dispatch.py  execute_code.py  handlers.py  plugin.yaml  registry.py  schemas.py  utils.py
tests/: test_env_file_transfer.py  test_multienv.py  test_multitool.py
