[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-multienv-plugin"
version = "0.1.0"
description = "Multi-environment tool plugin for Hermes Agent — work with multiple SSH and Docker environments simultaneously"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "odinykt"}]
requires-python = ">=3.11"
keywords = ["hermes", "agent", "ssh", "docker", "multi-environment", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/OdinYkt/hermes-multienv-plugin"
Repository = "https://github.com/OdinYkt/hermes-multienv-plugin"
Issues = "https://github.com/OdinYkt/hermes-multienv-plugin/issues"

[project.entry-points."hermes_agent.plugins"]
multienv = "multienv"

[tool.setuptools]
packages = ["multienv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
